# storyteller

./: .env  Cargo.toml  README.md  storyteller_architecture.excalidraw
docs/: api.md  db.md  db_stories.md  server.md
migrations/: 20240924010111_init_table.sql  20240925004725_add_story_table.sql  20240925010637_change_stories_author_id_type.sql
src/: errors.rs  lib.rs  main.rs
src/models/: mod.rs  story.rs  user.rs
src/server/: mod.rs
src/service/: mod.rs  story_service.rs  user_service.rs
